--- a/src/Components/Post/Post.css
+++ b/src/Components/Post/Post.css
@@ -16,54 +16,54 @@
 }
 
 .postcard{
-    background: linear-gradient(110deg, #CCFBF1 8.75%, #BBDCE9 101.85%, #99F6E4 101.85%);
     border-radius: 28px;
-    max-width: 500px;
-height: 300px;
+    width: 300px;
  display: flex;
- margin:0 auto;
+ flex-direction: column;
  padding: 24px 24px;
  align-items: center;
- margin-bottom: 2rem ;
+ justify-content: center;
+ flex-shrink: 0;
 }
 
+.posttext{
+    width: 80%;
+}
 .postimg{
-    align-self: flex-start;
-  width: 50px;
+  width: 80%;
+  height: auto;
 
 }
 .postimg img{
+    width: 100%;
 height: 200px;
+background-image: contain;
 }
-.posttext{
-   text-align: end;
-}
+
 .posttitle{
-    color: #111827;
+color: #111827;
 font-family: Inter;
-font-size: 28px;
+font-size: 25px;
 font-style: normal;
 font-weight: 600;
 line-height: 30px;
  /* 107.143% */
 }
+.postlink{
+    text-decoration: none;
+    color: #111827;
+}
+time{
+    color: var(--primary-text);
+    opacity: 0.8;
+   text-align: flex-end;
+}
 
 .author{
     display: flex;
-  justify-content: flex-end;
   gap: 3px;
 }
-
-.postinfo{
-    color: #474747;
-    font-family: Inter;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px; /* 171.429% */
-    width: 364px;
-    
-}
+  
 .postdesc{
     color: var(--secondary-background);
 font-family: Inter;
@@ -71,7 +71,7 @@ font-size: 14px;
 font-style: normal;
 font-weight: 400;
 line-height: 24px; /* 171.429% */
-width: 364px;
+width: 100%;
 }
 
 
